# hand_dataset_cvt

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_env.sh
download/: download_egodex.sh
reports/: dataset_mano_realhand.md  dataset_report.md  planarity_comparison.md
scripts/: convert_arctic.py  convert_arctic_webdataset.py  convert_dex_ycb.py  convert_egodex.py  convert_egodex_deprecated.py  convert_freihand.py  convert_freihand_webdataset.py  convert_hocap_webdataset.py  convert_hot3d_clipdataset.py  convert_interhand26m.py  convert_mtc.py  convert_reinterhand.py  convert_reinterhand_webdataset.py  convert_rhd.py  convert_whim.py  estimate_depth.py  eval_planarity.py  generate_meta.py  generate_random_keypoints.py  generate_report.py  patch_mm_to_meters.py  patch_reinterhand_scale.py  reencode_videos.py  report_mano_planarity.py  run_convert_interhand26m.sh  verify_datasets.py  visualize.py  visualize_mano.py  visualize_webdataset.py
scripts_hdf5/: convert_arctic.py  convert_egodex.py  convert_h2o3d.py  convert_hic.py  convert_ho3d.py  convert_ho_cap.py  convert_interhand26m.py  convert_mtc.py  convert_reinterhand.py  convert_rhd.py  convert_whim.py  eval_planarity.py  report_mano_planarity.py  visualize.py
slurm/: backup_dex_ycb.sbatch  check_gpus.sbatch  convert_arctic.sh  convert_freihand.sbatch  convert_h2o3d.sh  convert_mtc.sh  convert_mtc_eval.sh  convert_mtc_train.sh  convert_reinterhand.sh  convert_whim_train.sbatch  depth_dex_ycb.sbatch  prepare_dex_ycb.sbatch
utils/: camera_utils.py  depth_utils.py  io.py  (+4 more)
